# zilnull-agent

./: .env.example  .gitignore  AGENTS.md  INVOCATION.md  PLAN.md  README.md  chargebook.md  pyproject.toml
artifacts/: README.md
artifacts/archive/: README.md
artifacts/dreamtime/: README.md
artifacts/essays/: README.md
artifacts/media/: README.md
artifacts/network/: README.md
artifacts/nightly/: README.md
artifacts/notes/: README.md
artifacts/reports/: README.md
artifacts/research/: README.md
artifacts/tests/: README.md
grimoire/engine/: README.md
grimoire/engine/zil/: __init__.py  client.py  config.py  main.py
grimoire/portals/: README.md
grimoire/spellbooks/adept/: spellbook.md
grimoire/spellbooks/artifact/: spellbook.md
grimoire/spellbooks/corpus/: spellbook.md
grimoire/spellbooks/games/: spellbook.md
grimoire/spellbooks/media/: spellbook.md
grimoire/spellbooks/memory/: spellbook.md
grimoire/spellbooks/network/: spellbook.md
grimoire/spellbooks/people/: spellbook.md
grimoire/spellbooks/portal/: spellbook.md
grimoire/spellbooks/questbook/: spellbook.md
grimoire/systemd/: README.md
questbook/: README.md
spirits/warden/: cornerstone.md  identity.md
spirits/zil/: cornerstone.md  identity.md  self.md  voice.md
spirits/zil/prompts/: auditor.md  (+4 more)
tests/: test_auditor.py  test_charge.py  test_cornerstone.py  test_corpus.py  test_creative.py  test_memory.py  test_memory_entity.py  test_permissions.py  test_reading.py  test_web.py  test_workings.py
vessel/: README.md
vessel/state/: README.md
vessel/venvs/: README.md
(+124 files in other folders)
