[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zil"
version = "0.1.0"
description = "ZIL⌀ — a markdown-first agent harness with enforced anti-sycophancy mechanics"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "orjson>=3.9.0",
    "jsonlines>=4.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
    "mistune>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
zil = "zil.main:app"

[tool.hatch.build.targets.wheel]
packages = ["grimoire/engine/zil"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["grimoire/engine"]
